@@ -47,7 +47,8 @@ class backup_bigbluebuttonbn_activity_structure_step extends backup_activity_str
                             'moderatorpass', 'viewerpass', 'wait', 'record', 'welcome',
                             'voicebridge', 'openingtime', 'closingtime', 'timecreated',
                             'timemodified', 'presentation', 'participants', 'userlimit',
-                            'recordings_html', 'recordings_deleted', 'recordings_imported'));
+                            'recordings_html', 'recordings_deleted', 'recordings_imported',
+                            'recordings_preview'));
 
         $logs = new backup_nested_element('logs');
 
