@@ -202,7 +202,10 @@ class renderer {
                 !isset($CFG->bigbluebuttonbn['recordings_deleted_default']) ||
                 !isset($CFG->bigbluebuttonbn['recordings_deleted_editable']) ||
                 !isset($CFG->bigbluebuttonbn['recordings_imported_default']) ||
-                !isset($CFG->bigbluebuttonbn['recordings_imported_editable']));
+                !isset($CFG->bigbluebuttonbn['recordings_imported_editable']) ||
+                !isset($CFG->bigbluebuttonbn['recordings_preview_default']) ||
+                !isset($CFG->bigbluebuttonbn['recordings_preview_editable'])
+              );
     }
 
     /**
