@@ -259,6 +259,18 @@ $CFG->bigbluebuttonbn['shared_secret'] = '8cd8ef52e8e101574e400365b55e11a6';
  * $CFG->bigbluebuttonbn['recordings_imported_editable'] = 1;
  */
 
+ /*
+  * When the value is set to 1 (checked) the bigbluebuttonbn resources
+  * will show the recodings with thumbnails.
+  * $CFG->bigbluebuttonbn['recordings_preview_default'] = 1;
+  */
+
+  /*
+   * When the value is set to 1 (checked) the 'preview ui' capability can be
+   * enabled/disabled by the user creating or editing the resource.
+   * $CFG->bigbluebuttonbn['recordings_preview_editable'] = 0;
+   */
+
 /*
  *  CONFIGURATION FOR FEATURES OFFERED BY BN SERVERS
  ** ------------------------------------------------------------------ **
