@@ -437,6 +437,9 @@ function bigbluebuttonbn_process_pre_save_checkboxes(&$bigbluebuttonbn) {
     if (!isset($bigbluebuttonbn->recordings_imported)) {
         $bigbluebuttonbn->recordings_imported = 0;
     }
+    if (!isset($bigbluebuttonbn->recordings_preview)) {
+        $bigbluebuttonbn->recordings_preview = 0;
+    }
 }
 
 /**
